# cbc2026_team3_central

./: .gitignore  CLAUDE.md  impl_plan.md  main.py  package.json  pyproject.toml
config/: main_hand.yaml  sub_hand.yaml
lib/: can_manager.py  health.py  motor_check.py  server.py
lib/drivers/: base.py  edulite05.py  generic.py  m3508.py
lib/sequence/: engine.py
robots/: main_hand.py  sub_hand.py
tests/: test_can_manager.py  test_can_manager_health.py  test_health.py  test_main_health_config.py  test_main_motor_check_config.py  test_motor_check.py  test_sequence_engine.py  test_server_health.py  test_server_motor_check.py  test_ws_protocol.py
tests/drivers/: test_edulite05.py  test_generic.py  test_m3508.py
web/: .oxfmtrc.json  .oxlintrc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web/patches/: react-tuicss@1.0.4.patch
web/src/: App.tsx  index.css  main.tsx  router.tsx
web/src/components/: AppHeader.tsx  ConnectionStatus.tsx  EStopButton.tsx  EStopOverlay.tsx  HealthIndicator.tsx  Icon.tsx  Modal.tsx  MotorCheckButton.tsx  MotorCheckPanel.tsx  MotorStatus.tsx  MotorSummary.tsx  SequenceProgress.tsx  SequenceStepList.tsx  StatPill.tsx  StatusDot.tsx  TriggerButton.tsx
web/src/context/: RobotContext.tsx
web/src/hooks/: useMotorCheck.ts  useRobotSocket.ts
web/src/lib/: tuiColor.ts
web/src/pages/: Dashboard.tsx  MotorTuning.tsx  RobotControl.tsx
